--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -322,7 +322,8 @@ ul li {
   min-height: 100vh;
   position: relative;
   text-align: center;
-  background: url(../images/backgrounds/6.JPG) no-repeat center center/cover;
+  /*background: url(../images/backgrounds/6.JPG) no-repeat center center/cover;*/
+  background-color:black;
   display: table;
 }
 .site-header::before {
