--- a/public/assets/css/bootstrapCarouselBackground.css
+++ b/public/assets/css/bootstrapCarouselBackground.css
@@ -2,27 +2,48 @@
 .carousel
 {
   z-index:-1;
-  margin-bottom:-150px;
+  margin-bottom:-200px;
 }
+
+.carousel-inner{
+  width:100%;
+}
+.carousel-inner div img /*content */
+{
+  width:100%;
+  max-height: 600px !important;
+  opacity: 0.5;
+}
+
+
 #intro_heading_box
 {
-  background-color:rgba(0,0,0,0.8);
-  position:relative; bottom:400px;
+  /*background-color:rgba(0,0,0,0.8);*/
+  position:relative;
+  bottom:200px;
   padding:10px;
 }
+
 @media (max-width: 1200px) {
 
   .carousel
   {
-    margin-bottom:-100px;
+    margin-bottom:-200px;
+    margin-top:70px;
+  }
+  .carousel-inner div img /*content */
+  {
+    width:100%;
+    max-height: 600px !important;
+    opacity: 0.5;
   }
   #intro_heading_box
   {
-    bottom:60%;
+    bottom:35%;
     padding: 0px;
     padding-bottom: 10px;
     padding-top:10px;
-    background-color: rgba(0,0,0, 0.45);
+    /*background-color: rgba(0,0,0, 0.45);*/
   }
 }
 
@@ -30,7 +51,13 @@
 
   .carousel
   {
-    margin-bottom:-100px;
+    margin-bottom:-170px;
+  }
+  .carousel-inner div img /*content */
+  {
+    width:100%;
+    max-height: 550px !important;
+    opacity: 0.5;
   }
   #intro_heading_box
   {
@@ -38,7 +65,7 @@
     padding: 0px;
     padding-bottom: 10px;
     padding-top:10px;
-    background-color: rgba(0,0,0, 0.45);
+    /*background-color: rgba(0,0,0, 0.45);*/
   }
 }
 
@@ -48,13 +75,19 @@
   {
     margin-bottom:-200px;
   }
+  .carousel-inner div img /*content */
+  {
+    width:100%;
+    max-height: 450px !important;
+    opacity: 0.5;
+  }
   #intro_heading_box
   {
     bottom:50px;
     padding: 0px;
     padding-bottom: 10px;
     padding-top:10px;
-    background-color: rgba(0,0,0, 0.4);
+    /* background-color: rgba(0,0,0, 0.4); */
   }
   #intro_heading_box h2
   {
