--- a/public/assets/css/bootstrapCarouselBackground.css
+++ b/public/assets/css/bootstrapCarouselBackground.css
@@ -2,16 +2,15 @@
 .carousel
 {
   z-index:-1;
-  margin-bottom:-200px;
+  height:660px;
 }
-
 .carousel-inner{
-  width:100%;
+  height: 100%;
 }
 .carousel-inner div img /*content */
 {
   width:100%;
-  max-height: 600px !important;
+  margin-top:-180px;
   opacity: 0.5;
 }
 
@@ -19,71 +18,116 @@
 #intro_heading_box
 {
   /*background-color:rgba(0,0,0,0.8);*/
-  position:relative;
-  bottom:200px;
-  padding:10px;
+  position:absolute;
+  bottom:50px;
+  align-self: center;
+  z-index: 99;
 }
-
-@media (max-width: 1200px) {
-
+@media(max-width:1340px){
   .carousel
   {
-    margin-bottom:-200px;
-    margin-top:70px;
+    height: 100%;
+    z-index:-1;
   }
   .carousel-inner div img /*content */
   {
     width:100%;
-    max-height: 600px !important;
+    margin:0px;
     opacity: 0.5;
   }
   #intro_heading_box
   {
-    bottom:35%;
+    bottom:120px;
     padding: 0px;
     padding-bottom: 10px;
     padding-top:10px;
-    /*background-color: rgba(0,0,0, 0.45);*/
+    /* background-color: rgba(0,0,0, 0.4); */
+  }
+  #intro_heading_box h2
+  {
+    font-size: 23px;
+  }
+  #intro_heading_box h1
+  {
+    font-size: 25px;
+  }
+}
+@media (max-width: 1200px) {
+  .carousel
+  {
+    height: 100%;
+    z-index:-1;
+  }
+  .carousel-inner div img /*content */
+  {
+    width:100%;
+    margin:0px;
+    opacity: 0.5;
+  }
+  #intro_heading_box
+  {
+    bottom:120px;
+    padding: 0px;
+    padding-bottom: 10px;
+    padding-top:10px;
+    /* background-color: rgba(0,0,0, 0.4); */
+  }
+  #intro_heading_box h2
+  {
+    font-size: 23px;
+  }
+  #intro_heading_box h1
+  {
+    font-size: 25px;
   }
 }
 
 @media (max-width: 992px) {
-
   .carousel
   {
-    margin-bottom:-170px;
+    height: 100%;
+    z-index:-1;
   }
   .carousel-inner div img /*content */
   {
     width:100%;
-    max-height: 550px !important;
+    margin:0px;
     opacity: 0.5;
   }
   #intro_heading_box
   {
-    bottom:200px;
+    bottom:80px;
     padding: 0px;
     padding-bottom: 10px;
     padding-top:10px;
-    /*background-color: rgba(0,0,0, 0.45);*/
+    /* background-color: rgba(0,0,0, 0.4); */
   }
+  #intro_heading_box h2
+  {
+    font-size: 18px;
+  }
+  #intro_heading_box h1
+  {
+    font-size: 23px;
+  }
+
 }
 
 @media (max-width: 600px) {
-
   .carousel
   {
-    margin-bottom:-200px;
+    height: 100%;
+    z-index:-1;
   }
   .carousel-inner div img /*content */
   {
     width:100%;
-    max-height: 450px !important;
+    margin:0px;
     opacity: 0.5;
   }
   #intro_heading_box
   {
-    bottom:50px;
+    bottom:80px;
     padding: 0px;
     padding-bottom: 10px;
     padding-top:10px;
@@ -95,6 +139,6 @@
   }
   #intro_heading_box h1
   {
-    font-size: 18px;
+    font-size: 14px;
   }
 }
