--- a/public/assets/css/bootstrapCarouselBackground.css
+++ b/public/assets/css/bootstrapCarouselBackground.css
@@ -2,16 +2,27 @@
 .carousel
 {
   z-index:-1;
+  height: 100%;
 }
 .carousel-inner{
   height: 100%;
 }
+.item
+{
+
+  height: 100vh;
+  min-height: 350px;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 .carousel-inner div img /*content */
 {
-  width:100%;
-  opacity: 0.5;
+  opacity 0.5;
+  height: 100vh;
 }
-
 
 #intro_heading_box
 {
@@ -21,18 +32,8 @@
   align-self: center;
   z-index: 99;
 }
-@media(max-width:1340px){
-  .carousel
-  {
-    height: 100%;
-    z-index:-1;
-  }
-  .carousel-inner div img /*content */
-  {
-    width:100%;
-    margin:0px;
-    opacity: 0.5;
-  }
+@media(max-width:1340px)
+{
   #intro_heading_box
   {
     bottom:120px;
@@ -51,16 +52,7 @@
   }
 }
 @media (max-width: 1200px) {
-  .carousel
-  {
-    height: 100%;
-    z-index:-1;
-  }
-  .carousel-inner div img /*content */
-  {
-    width:100%;
-    opacity: 0.5;
-  }
+
   #intro_heading_box
   {
     bottom:120px;
@@ -80,17 +72,7 @@
 }
 
 @media (max-width: 992px) {
-  .carousel
-  {
-    height: 100%;
-    z-index:-1;
-  }
-  .carousel-inner div img /*content */
-  {
-    width:100%;
-    margin:0px;
-    opacity: 0.5;
-  }
+
   #intro_heading_box
   {
     bottom:80px;
@@ -113,14 +95,6 @@
 @media (max-width: 600px) {
   .carousel
   {
-    height: 100%;
-    z-index:-1;
-  }
-  .carousel-inner div img /*content */
-  {
-    width:100%;
-    margin:0px;
-    opacity: 0.5;
   }
   #intro_heading_box
   {
