--- a/docs/assets/css/bootstrapCarouselBackground.css
+++ b/docs/assets/css/bootstrapCarouselBackground.css
@@ -2,16 +2,27 @@
 .carousel
 {
   z-index:-1;
+  height: 100%;
 }
 .carousel-inner{
   height: 100%;
 }
+.item
+{
+
+  height: 100vh;
+  min-height: 350px;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 .carousel-inner div img /*content */
 {
-  width:100%;
-  opacity: 0.5;
+  opacity 0.5;
+  height: 100vh;
 }
-
 
 #intro_heading_box
 {
@@ -20,19 +31,34 @@
   bottom:50px;
   align-self: center;
   z-index: 99;
+
+
+    border:dashed 0px #000000;
+    -moz-border-radius-topleft: 20px;
+    -moz-border-radius-topright:20px;
+    -moz-border-radius-bottomleft:20px;
+    -moz-border-radius-bottomright:20px;
+    -webkit-border-top-left-radius:20px;
+    -webkit-border-top-right-radius:20px;
+    -webkit-border-bottom-left-radius:20px;
+    -webkit-border-bottom-right-radius:20px;
+    border-top-left-radius:20px;
+    border-top-right-radius:20px;
+    border-bottom-left-radius:20px;
+    border-bottom-right-radius:20px;
+
+
 }
-@media(max-width:1340px){
-  .carousel
-  {
-    height: 100%;
-    z-index:-1;
-  }
-  .carousel-inner div img /*content */
-  {
-    width:100%;
-    margin:0px;
-    opacity: 0.5;
-  }
+#intro_heading_box h2
+{
+  font-size: 19px;
+}
+#intro_heading_box h1
+{
+  font-size: 21px;
+}
+@media(max-width:1340px)
+{
   #intro_heading_box
   {
     bottom:120px;
@@ -51,16 +77,7 @@
   }
 }
 @media (max-width: 1200px) {
-  .carousel
-  {
-    height: 100%;
-    z-index:-1;
-  }
-  .carousel-inner div img /*content */
-  {
-    width:100%;
-    opacity: 0.5;
-  }
+
   #intro_heading_box
   {
     bottom:120px;
@@ -80,17 +97,7 @@
 }
 
 @media (max-width: 992px) {
-  .carousel
-  {
-    height: 100%;
-    z-index:-1;
-  }
-  .carousel-inner div img /*content */
-  {
-    width:100%;
-    margin:0px;
-    opacity: 0.5;
-  }
+
   #intro_heading_box
   {
     bottom:80px;
@@ -113,14 +120,6 @@
 @media (max-width: 600px) {
   .carousel
   {
-    height: 100%;
-    z-index:-1;
-  }
-  .carousel-inner div img /*content */
-  {
-    width:100%;
-    margin:0px;
-    opacity: 0.5;
   }
   #intro_heading_box
   {
