--- a/public/assets/css/style_boxes.css
+++ b/public/assets/css/style_boxes.css
@@ -1,6 +1,6 @@
 .style-box-1
 {
-  padding:15px;
+  padding:12px;
   border-width: 6px;
   width:80%;
   color:black;
@@ -18,12 +18,29 @@
 
 @media(max-width:1340px)
 {
-
+  .style-box-1
+  {
+    border-style: solid;
+    border-color: black;
+    border-width: 3px;
+    margin-top:10px;
+    width:350px;
+    height: 350px;
+    margin-bottom:10px;
+  }
 }
 
 @media (max-width: 1200px)
 {
-
+  .style-box-1
+  {
+    border-style: solid;
+    border-color: black;
+    border-width: 3px;
+    margin-top:10px;
+    width:220px;
+    margin-bottom:10px;
+  }
 }
 
 @media (max-width: 992px)
@@ -34,7 +51,10 @@
     border-color: black;
     border-width: 2px;
     margin-top:10px;
-    margin-bottom:10px;
+    width: 88%;
+    height: 60%;
+    margin-bottom:50px;
+
   }
 }
 
