--- a/docs/assets/css/style_boxes.css
+++ b/docs/assets/css/style_boxes.css
@@ -6,7 +6,7 @@
   color:black;
   text-align: center;
   height: 600px;
-  background-color: rgba(0,0,0, 0.2);
+  background-color: rgb(254, 198, 3);
 }
 .style-box-1 > h2
 {
@@ -14,6 +14,7 @@
 }
 .style-box-1 > p
 {
+  text-align: justify;
   font-size: 1em;
   font-weight: 501;
 }
@@ -43,8 +44,9 @@
   }
   .style-box-1 > p
   {
+    text-align: justify;
     font-size: 0.8em;
-    font-weight: 200;
+    font-weight: 501;
   }
   .style-box-image
   {
@@ -141,7 +143,7 @@
   width:82%;
   color:black;
   text-align: center;
-  background-color: rgba(0,0,0, 0.2);
+  background-color: rgb(254, 198, 3);
 }
 .style-box-2 > h2
 {
@@ -151,6 +153,7 @@
 {
   font-size: 1em;
   font-weight: 501;
+  text-align: justify;
 }
 
 @media(max-width:1340px)
@@ -172,7 +175,7 @@
   .style-box-2 > p
   {
     font-size: 0.8em;
-    font-weight: 200;
+    font-weight: 501;
   }
 }
 
