--- a/public/assets/css/bootstrapCarouselBackground.css
+++ b/public/assets/css/bootstrapCarouselBackground.css
@@ -57,7 +57,10 @@
 {
   font-size: 1.6em;
 }
-
+#intro_heading_box h3
+{
+  font-size:1.2em;
+}
 @media(max-width:1340px)
 {
   #intro_heading_box
@@ -76,6 +79,10 @@
   {
     font-size: 50px;
   }
+  #intro_heading_box h3
+  {
+    font-size: 20px;
+  }
 }
 @media (max-width: 1200px) {
 
@@ -86,6 +93,10 @@
     padding-bottom: 10px;
     padding-top:10px;
     /* background-color: rgba(0,0,0, 0.4); */
+  }
+  #intro_heading_box h3
+  {
+    font-size: 20px;
   }
   #intro_heading_box h2
   {
@@ -106,6 +117,10 @@
     padding-bottom: 10px;
     padding-top:10px;
     /* background-color: rgba(0,0,0, 0.4); */
+  }
+  #intro_heading_box h3
+  {
+    font-size: 15px;
   }
   #intro_heading_box h2
   {
